# llm_ui

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/styles/: layout.css
templates/: index.hbs  llm_response.hbs  ui_home.hbs
